--- a/SKU Adder/readme.me
+++ b/SKU Adder/readme.me
@@ -10,3 +10,9 @@ Files needed:
 -- Calorie Info Getter
 - Final.csv
 -- Exisiting CSV where needed information is added
+
+Known issues:
+Two global ID under one product
+- Starbucks Master CSV has duplicate with names being the same. Unsure which one is the correct global ID so grabs it all and concats.
+!(https://i.imgur.com/Hp9og3A.png)
+!(https://i.imgur.com/IsAMhRG.png)
